--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
+    "react-router-dom": "^7.9.5",
     "zod": "^4.1.12"
   },
   "devDependencies": {
